OSDOCS-12224: 4.15.36 z-stream RN

--- a/release_notes/ocp-4-15-release-notes.adoc
+++ b/release_notes/ocp-4-15-release-notes.adoc
@@ -2745,6 +2745,40 @@ This section will continue to be updated over time to provide notes on enhanceme
 For any {product-title} release, always review the instructions on xref:../updating/updating_a_cluster/updating-cluster-web-console.adoc#updating-cluster-web-console[updating your cluster] properly.
 ====
 
+//4.15.36
+[id="ocp-4-15-36_{context}"]
+=== RHSA-2024:7594 - {product-title} 4.15.36 bug fix and security update
+
+Issued: 09 October 2024
+
+{product-title} release 4.15.36, which includes security updates, is now available. The list of bug fixes that are included in this update is documented in the link:https://access.redhat.com/errata/RHSA-2024:7594[RHSA-2024:7594] advisory. There are no RPM packages for this release.
+
+Space precluded documenting all of the container images for this release in the advisory.
+
+You can view the container images in this release by running the following command:
+
+[source,terminal]
+----
+$ oc adm release info 4.15.36 --pullspecs
+----
+
+[id="ocp-4-15-36-bug-fixes_{context}"]
+==== Bug fixes
+
+* Previously, if a connection on port 9637 for Windows nodes was refused, the Kubelet Service Monitor threw a `target down` alert because CRIO doesn't run on Windows nodes. With this release, Windows nodes are excluded from the Kubelet Service Monitor. (link:https://issues.redhat.com/browse/OCPBUGS-42586[*OCPBUGS-42586*])
+
+* Previously, a change in the ordering of the `TextInput` parameters for PatternFly v4 and v5 caused the `until` field to be improperly filled and you could not edit it. With this release, the `until` field is editable so you can input the correct information. (link:https://issues.redhat.com/browse/OCPBUGS-42384[*OCPBUGS-42384*])
+
+* Previously, when the Node Tuning Operator (NTO) was configured using performance profiles, it created the `ocp-tuned-one-shot systemd` service. The service ran before the kubelet and blocked the service execution. The `systemd` service invoked Podman, which used the NTO image. If the NTO image was not present, Podman tried to fetch the image. 
++
+With this release, support is added for cluster-wide proxy environment variables that are defined in the `/etc/mco/proxy.env` environment. This allows Podman to pull NTO images in environments that need the HTTP/HTTPS proxy for out-of-cluster connections. (link:https://issues.redhat.com/browse/OCPBUGS-42284[*OCPBUGS-42284*])
+
+* Previously, a node registration issue prevented you from using Redfish Virtual Media to add an xFusion bare-metal node to your cluster. The issue occurred because the hardware was not fully compliant with Redfish. With this release, you can add xFusion bare-metal nodes to your cluster. (link:https://issues.redhat.com/browse/OCPBUGS-38798[*OCPBUGS-38798*])
+
+[id="ocp-4-15-36-updating_{context}"]
+==== Updating
+To update an {product-title} 4.15 cluster to this latest release, see xref:../updating/updating_a_cluster/updating-cluster-cli.adoc#updating-cluster-cli[Updating a cluster by using the CLI].
+
 [id="ocp-4-15-35_{context}"]
 === RHSA-2024:7179 - {product-title} 4.15.35 bug fix and security update
 
@@ -2786,7 +2820,7 @@ $ oc adm release info 4.15.35 --pullspecs
 
 [id="ocp-4-15-35-updating_{context}"]
 ==== Updating
-To update an {product-title} 4.15 cluster to this latest release, see xref:../updating/updating_a_cluster/updating-cluster-cli.adoc#updating-cluster-cli[Updating a cluster using the CLI].
+To update an {product-title} 4.15 cluster to this latest release, see xref:../updating/updating_a_cluster/updating-cluster-cli.adoc#updating-cluster-cli[Updating a cluster by using the CLI].
 
 [id="ocp-4-15-34_{context}"]
 === RHSA-2024:6818 - {product-title} 4.15.34 bug fix and security update
@@ -2832,7 +2866,7 @@ The following enhancement is included in this z-stream release:
 
 [id="ocp-4-15-34-updating_{context}"]
 ==== Updating
-To update an {product-title} 4.15 cluster to this latest release, see xref:../updating/updating_a_cluster/updating-cluster-cli.adoc#updating-cluster-cli[Updating a cluster using the CLI].
+To update an {product-title} 4.15 cluster to this latest release, see xref:../updating/updating_a_cluster/updating-cluster-cli.adoc#updating-cluster-cli[Updating a cluster by using the CLI].
 
 [id="ocp-4-15-33_{context}"]
 === RHSA-2024:6685 - {product-title} 4.15.33 bug fix and security update
@@ -2852,7 +2886,7 @@ $ oc adm release info 4.15.33 --pullspecs
 
 [id="ocp-4-15-33-updating_{context}"]
 ==== Updating
-To update an {product-title} 4.15 cluster to this latest release, see xref:../updating/updating_a_cluster/updating-cluster-cli.adoc#updating-cluster-cli[Updating a cluster using the CLI].
+To update an {product-title} 4.15 cluster to this latest release, see xref:../updating/updating_a_cluster/updating-cluster-cli.adoc#updating-cluster-cli[Updating a cluster by using the CLI].
 
 [id="ocp-4-15-32_{context}"]
 === RHSA-2024:6637 - {product-title} 4.15.32 bug fix and security update
@@ -2879,7 +2913,7 @@ $ oc adm release info 4.15.32 --pullspecs
 
 [id="ocp-4-15-32-updating_{context}"]
 ==== Updating
-To update an {product-title} 4.15 cluster to this latest release, see xref:../updating/updating_a_cluster/updating-cluster-cli.adoc#updating-cluster-cli[Updating a cluster using the CLI].
+To update an {product-title} 4.15 cluster to this latest release, see xref:../updating/updating_a_cluster/updating-cluster-cli.adoc#updating-cluster-cli[Updating a cluster by using the CLI].
 
 [id="ocp-4-15-31_{context}"]
 === RHSA-2024:6409 - {product-title} 4.15.31 bug fix and security update
@@ -2926,7 +2960,7 @@ $ oc adm release info 4.15.31 --pullspecs
 
 [id="ocp-4-15-31-updating_{context}"]
 ==== Updating
-To update an {product-title} 4.15 cluster to this latest release, see xref:../updating/updating_a_cluster/updating-cluster-cli.adoc#updating-cluster-cli[Updating a cluster using the CLI].
+To update an {product-title} 4.15 cluster to this latest release, see xref:../updating/updating_a_cluster/updating-cluster-cli.adoc#updating-cluster-cli[Updating a cluster by using the CLI].
 
 [id="ocp-4-15-30_{context}"]
 === RHSA-2024:6013 - {product-title} 4.15.30 bug fix and security update
@@ -2957,7 +2991,7 @@ $ oc adm release info 4.15.30 --pullspecs
 
 [id="ocp-4-15-30-updating_{context}"]
 ==== Updating
-To update an {product-title} 4.15 cluster to this latest release, see xref:../updating/updating_a_cluster/updating-cluster-cli.adoc#updating-cluster-cli[Updating a cluster using the CLI].
+To update an {product-title} 4.15 cluster to this latest release, see xref:../updating/updating_a_cluster/updating-cluster-cli.adoc#updating-cluster-cli[Updating a cluster by using the CLI].
 
 [id="ocp-4-15-29_{context}"]
 === RHSA-2024:5439 - {product-title} 4.15.29 bug fix and security update
@@ -2982,7 +3016,7 @@ $ oc adm release info 4.15.29 --pullspecs
 
 [id="ocp-4-15-29-updating_{context}"]
 ==== Updating
-To update an {product-title} 4.15 cluster to this latest release, see xref:../updating/updating_a_cluster/updating-cluster-cli.adoc#updating-cluster-cli[Updating a cluster using the CLI].
+To update an {product-title} 4.15 cluster to this latest release, see xref:../updating/updating_a_cluster/updating-cluster-cli.adoc#updating-cluster-cli[Updating a cluster by using the CLI].
 
 // 4.15.28
 [id="ocp-4-15-28_{context}"]
@@ -3013,7 +3047,7 @@ $ oc adm release info 4.15.28 --pullspecs
 
 [id="ocp-4-15-28-updating_{context}"]
 ==== Updating
-To update an {product-title} 4.15 cluster to this latest release, see xref:../updating/updating_a_cluster/updating-cluster-cli.adoc#updating-cluster-cli[Updating a cluster using the CLI].
+To update an {product-title} 4.15 cluster to this latest release, see xref:../updating/updating_a_cluster/updating-cluster-cli.adoc#updating-cluster-cli[Updating a cluster by using the CLI].
 
 
 // 4.15.27
@@ -3058,7 +3092,7 @@ The following enhancement is included in this z-stream release:
 
 [id="ocp-4-15-27-updating_{context}"]
 ==== Updating
-To update an {product-title} 4.15 cluster to this latest release, see xref:../updating/updating_a_cluster/updating-cluster-cli.adoc#updating-cluster-cli[Updating a cluster using the CLI].
+To update an {product-title} 4.15 cluster to this latest release, see xref:../updating/updating_a_cluster/updating-cluster-cli.adoc#updating-cluster-cli[Updating a cluster by using the CLI].
 
 // 4.15.25
 [id="ocp-4-15-25_{context}"]
@@ -3108,7 +3142,7 @@ For more information, see _Configuring Capacity Reservation by using machine set
 
 [id="ocp-4-15-25-updating_{context}"]
 ==== Updating
-To update an {product-title} 4.15 cluster to this latest release, see xref:../updating/updating_a_cluster/updating-cluster-cli.adoc#updating-cluster-cli[Updating a cluster using the CLI].
+To update an {product-title} 4.15 cluster to this latest release, see xref:../updating/updating_a_cluster/updating-cluster-cli.adoc#updating-cluster-cli[Updating a cluster by using the CLI].
 
 [id="ocp-4-15-24_{context}"]
 === RHSA-2024:4850 - {product-title} 4.15.24 bug fix and security update
@@ -3133,7 +3167,7 @@ $ oc adm release info 4.15.24 --pullspecs
 
 [id="ocp-4-15-24-updating_{context}"]
 ==== Updating
-To update an {product-title} 4.15 cluster to this latest release, see xref:../updating/updating_a_cluster/updating-cluster-cli.adoc#updating-cluster-cli[Updating a cluster using the CLI].
+To update an {product-title} 4.15 cluster to this latest release, see xref:../updating/updating_a_cluster/updating-cluster-cli.adoc#updating-cluster-cli[Updating a cluster by using the CLI].
 
 [id="ocp-4-15-23_{context}"]
 === RHSA-2024:4699 - {product-title} 4.15.23 bug fix and security update
@@ -3178,7 +3212,7 @@ The following enhancement is included in this z-stream release:
 
 [id="ocp-4-15-23-updating_{context}"]
 ==== Updating
-To update an {product-title} 4.15 cluster to this latest release, see xref:../updating/updating_a_cluster/updating-cluster-cli.adoc#updating-cluster-cli[Updating a cluster using the CLI].
+To update an {product-title} 4.15 cluster to this latest release, see xref:../updating/updating_a_cluster/updating-cluster-cli.adoc#updating-cluster-cli[Updating a cluster by using the CLI].
 
 // 4.15.22
 [id="ocp-4-15-22"]
@@ -3225,7 +3259,7 @@ The following enhancement is included in this z-stream release:
 
 [id="ocp-4-15-22-updating"]
 ==== Updating
-To update an {product-title} 4.15 cluster to this latest release, see xref:../updating/updating_a_cluster/updating-cluster-cli.adoc#updating-cluster-cli[Updating a cluster using the CLI].
+To update an {product-title} 4.15 cluster to this latest release, see xref:../updating/updating_a_cluster/updating-cluster-cli.adoc#updating-cluster-cli[Updating a cluster by using the CLI].
 
 // 4.15.21
 [id="ocp-4-15-21"]
@@ -3263,7 +3297,7 @@ $ oc adm release info 4.15.21 --pullspecs
 
 [id="ocp-4-15-21-updating"]
 ==== Updating
-To update an existing {product-title} 4.15 cluster to this latest release, see xref:../updating/updating_a_cluster/updating-cluster-cli.adoc#updating-cluster-cli[Updating a cluster using the CLI].
+To update an {product-title} 4.15 cluster to this latest release, see xref:../updating/updating_a_cluster/updating-cluster-cli.adoc#updating-cluster-cli[Updating a cluster by using the CLI].
 
 // 4.15.20
 [id="ocp-4-15-20"]
@@ -3318,7 +3352,7 @@ The following enhancements are included in this z-stream release:
 
 [id="ocp-4-15-20-updating"]
 ==== Updating
-To update an existing {product-title} 4.15 cluster to this latest release, see xref:../updating/updating_a_cluster/updating-cluster-cli.adoc#updating-cluster-cli[Updating a cluster using the CLI].
+To update an {product-title} 4.15 cluster to this latest release, see xref:../updating/updating_a_cluster/updating-cluster-cli.adoc#updating-cluster-cli[Updating a cluster by using the CLI].
 
 // 4.15.19
 [id="ocp-4-15-19"]
@@ -3356,7 +3390,7 @@ $ oc adm release info 4.15.19 --pullspecs
 
 [id="ocp-4-15-19-updating"]
 ==== Updating
-To update an existing {product-title} 4.15 cluster to this latest release, see xref:../updating/updating_a_cluster/updating-cluster-cli.adoc#updating-cluster-cli[Updating a cluster using the CLI].
+To update an {product-title} 4.15 cluster to this latest release, see xref:../updating/updating_a_cluster/updating-cluster-cli.adoc#updating-cluster-cli[Updating a cluster by using the CLI].
 
 // 4.15.18
 [id="ocp-4-15-18"]
@@ -3414,7 +3448,7 @@ This update introduces a new `UnservableInFutureVersions` status condition to ro
 
 [id="ocp-4-15-18-updating"]
 ==== Updating
-To update an existing {product-title} 4.15 cluster to this latest release, see xref:../updating/updating_a_cluster/updating-cluster-cli.adoc#updating-cluster-cli[Updating a cluster using the CLI].
+To update an {product-title} 4.15 cluster to this latest release, see xref:../updating/updating_a_cluster/updating-cluster-cli.adoc#updating-cluster-cli[Updating a cluster by using the CLI].
 
 [id="ocp-4-15-17"]
 === RHBA-2024:3673 - {product-title} 4.15.17 bug fix and security update
@@ -3457,7 +3491,7 @@ The following enhancement is included in this z-stream release:
 
 [id="ocp-4-15-17-updating"]
 ==== Updating
-To update an existing {product-title} 4.15 cluster to this latest release, see xref:../updating/updating_a_cluster/updating-cluster-cli.adoc#updating-cluster-cli[Updating a cluster using the CLI].
+To update an {product-title} 4.15 cluster to this latest release, see xref:../updating/updating_a_cluster/updating-cluster-cli.adoc#updating-cluster-cli[Updating a cluster by using the CLI].
 
 [id="ocp-4-15-16"]
 === RHBA-2024:3488 - {product-title} 4.15.16 bug fix update
@@ -3486,7 +3520,7 @@ $ oc adm release info 4.15.16 --pullspecs
 
 [id="ocp-4-15-16-updating"]
 ==== Updating
-To update an existing {product-title} 4.15 cluster to this latest release, see xref:../updating/updating_a_cluster/updating-cluster-cli.adoc#updating-cluster-cli[Updating a cluster using the CLI].
+To update an {product-title} 4.15 cluster to this latest release, see xref:../updating/updating_a_cluster/updating-cluster-cli.adoc#updating-cluster-cli[Updating a cluster by using the CLI].
 
 [id="ocp-4-15-15"]
 === RHSA-2024:3327 - {product-title} 4.15.15 bug fix and security update
@@ -3530,7 +3564,7 @@ $ oc adm release info 4.15.15 --pullspecs
 
 [id="ocp-4-15-15-updating"]
 ==== Updating
-To update an existing {product-title} 4.15 cluster to this latest release, see xref:../updating/updating_a_cluster/updating-cluster-cli.adoc#updating-cluster-cli[Updating a cluster using the CLI].
+To update an {product-title} 4.15 cluster to this latest release, see xref:../updating/updating_a_cluster/updating-cluster-cli.adoc#updating-cluster-cli[Updating a cluster by using the CLI].
 
 [id="ocp-4-15-14"]
 === RHSA-2024:2865 - {product-title} 4.15.14 bug fix and security update
@@ -3573,7 +3607,7 @@ $ oc adm release info 4.15.14 --pullspecs
 
 [id="ocp-4-15-14-updating"]
 ==== Updating
-To update an existing {product-title} 4.15 cluster to this latest release, see xref:../updating/updating_a_cluster/updating-cluster-cli.adoc#updating-cluster-cli[Updating a cluster using the CLI].
+To update an {product-title} 4.15 cluster to this latest release, see xref:../updating/updating_a_cluster/updating-cluster-cli.adoc#updating-cluster-cli[Updating a cluster by using the CLI].
 
 [id="ocp-4-15-13"]
 === RHSA-2024:2773 - {product-title} 4.15.13 bug fix and security update
@@ -3612,7 +3646,7 @@ $ oc adm release info 4.15.13 --pullspecs
 
 [id="ocp-4-15-13-updating"]
 ==== Updating
-To update an existing {product-title} 4.15 cluster to this latest release, see xref:../updating/updating_a_cluster/updating-cluster-cli.adoc#updating-cluster-cli[Updating a cluster using the CLI].
+To update an {product-title} 4.15 cluster to this latest release, see xref:../updating/updating_a_cluster/updating-cluster-cli.adoc#updating-cluster-cli[Updating a cluster by using the CLI].
 
 [id="ocp-4-15-12"]
 === RHSA-2024:2664 - {product-title} 4.15.12 bug fix and security update
@@ -3683,7 +3717,7 @@ The following enhancements are included in this z-stream release:
 
 [id="ocp-4-15-12-updating"]
 ==== Updating
-To update an existing {product-title} 4.15 cluster to this latest release, see xref:../updating/updating_a_cluster/updating-cluster-cli.adoc#updating-cluster-cli[Updating a cluster using the CLI].
+To update an {product-title} 4.15 cluster to this latest release, see xref:../updating/updating_a_cluster/updating-cluster-cli.adoc#updating-cluster-cli[Updating a cluster by using the CLI].
 
 [id="ocp-4-15-11"]
 === RHSA-2024:2068 - {product-title} 4.15.11 bug fix and security update
@@ -3756,7 +3790,7 @@ The following enhancements are included in this z-stream release:
 
 [id="ocp-4-15-11-updating"]
 ==== Updating
-To update an existing {product-title} 4.15 cluster to this latest release, see xref:../updating/updating_a_cluster/updating-cluster-cli.adoc#updating-cluster-cli[Updating a cluster using the CLI].
+To update an {product-title} 4.15 cluster to this latest release, see xref:../updating/updating_a_cluster/updating-cluster-cli.adoc#updating-cluster-cli[Updating a cluster by using the CLI].
 
 
 [id="ocp-4-15-10"]
@@ -3790,7 +3824,7 @@ $ oc adm release info 4.15.10 --pullspecs
 
 [id="ocp-4-15-10-updating"]
 ==== Updating
-To update an existing {product-title} 4.15 cluster to this latest release, see xref:../updating/updating_a_cluster/updating-cluster-cli.adoc#updating-cluster-cli[Updating a cluster using the CLI].
+To update an {product-title} 4.15 cluster to this latest release, see xref:../updating/updating_a_cluster/updating-cluster-cli.adoc#updating-cluster-cli[Updating a cluster by using the CLI].
 
 [id="ocp-4-15-9"]
 === RHSA-2024:1770 - {product-title} 4.15.9 bug fix and security update
@@ -3829,7 +3863,7 @@ The following enhancements are included in this z-stream release:
 
 [id="ocp-4-15-9-updating"]
 ==== Updating
-To update an existing {product-title} 4.15 cluster to this latest release, see xref:../updating/updating_a_cluster/updating-cluster-cli.adoc#updating-cluster-cli[Updating a cluster using the CLI].
+To update an {product-title} 4.15 cluster to this latest release, see xref:../updating/updating_a_cluster/updating-cluster-cli.adoc#updating-cluster-cli[Updating a cluster by using the CLI].
 
 // 4.15.8
 [id="ocp-4-15-8"]
@@ -3850,7 +3884,7 @@ $ oc adm release info 4.15.8 --pullspecs
 
 [id="ocp-4-15-8-updating"]
 ==== Updating
-To update an existing {product-title} 4.15 cluster to this latest release, see xref:../updating/updating_a_cluster/updating-cluster-cli.adoc#updating-cluster-cli[Updating a cluster using the CLI].
+To update an {product-title} 4.15 cluster to this latest release, see xref:../updating/updating_a_cluster/updating-cluster-cli.adoc#updating-cluster-cli[Updating a cluster by using the CLI].
 
 // 4.15.7 was skipped.
 [id="ocp-4-15-6"]
@@ -3877,7 +3911,7 @@ Workaround: Use the Red Hat OpenShift Container Platform 4.15.5 `oc-mirror` bina
 
 [id="ocp-4-15-6-updating"]
 ==== Updating
-To update an existing {product-title} 4.15 cluster to this latest release, see xref:../updating/updating_a_cluster/updating-cluster-cli.adoc#updating-cluster-cli[Updating a cluster using the CLI].
+To update an {product-title} 4.15 cluster to this latest release, see xref:../updating/updating_a_cluster/updating-cluster-cli.adoc#updating-cluster-cli[Updating a cluster by using the CLI].
 
 [id="ocp-4-15-5"]
 === RHSA-2024:1449 - {product-title} 4.15.5 bug fix and security update
@@ -3904,7 +3938,7 @@ $ oc adm release info 4.15.5 --pullspecs
 
 [id="ocp-4-15-5-updating"]
 ==== Updating
-To update an existing {product-title} 4.15 cluster to this latest release, see xref:../updating/updating_a_cluster/updating-cluster-cli.adoc#updating-cluster-cli[Updating a cluster using the CLI].
+To update an {product-title} 4.15 cluster to this latest release, see xref:../updating/updating_a_cluster/updating-cluster-cli.adoc#updating-cluster-cli[Updating a cluster by using the CLI].
 
 [id="ocp-4-15-3"]
 === RHSA-2024:1255 - {product-title} 4.15.3 bug fix and security update
@@ -3929,7 +3963,7 @@ $ oc adm release info 4.15.3 --pullspecs
 
 [id="ocp-4-15-3-updating"]
 ==== Updating
-To update an existing {product-title} 4.15 cluster to this latest release, see xref:../updating/updating_a_cluster/updating-cluster-cli.adoc#updating-cluster-cli[Updating a cluster using the CLI].
+To update an {product-title} 4.15 cluster to this latest release, see xref:../updating/updating_a_cluster/updating-cluster-cli.adoc#updating-cluster-cli[Updating a cluster by using the CLI].
 
 [id="ocp-4-15-2"]
 === RHSA-2024:1210 - {product-title} 4.15.2 bug fix and security update
@@ -3967,4 +4001,4 @@ The installation of {product-title} might fail when a performance profile is pre
 
 [id="ocp-4-15-2-updating"]
 ==== Updating
-To update an existing {product-title} 4.15 cluster to this latest release, see xref:../updating/updating_a_cluster/updating-cluster-cli.adoc#updating-cluster-cli[Updating a cluster using the CLI].
+To update an {product-title} 4.15 cluster to this latest release, see xref:../updating/updating_a_cluster/updating-cluster-cli.adoc#updating-cluster-cli[Updating a cluster by using the CLI].
