Fixing RDS docs for easy CPs

--- a/modules/telco-core-rds-networking.adoc
+++ b/modules/telco-core-rds-networking.adoc
@@ -7,6 +7,9 @@
 = Networking
 
 New in this release::
+//CNF-10593
+* Telco core validation is now extended with bonding, MACVLAN, IPVLAN and SR-IOV networking scenarios.
+
 Description::
 * The cluster is configured in dual-stack IP configuration (IPv4 and IPv6).
 
