CNV-36607: RN for post-copy live migration

--- a/virt/release_notes/virt-4-17-release-notes.adoc
+++ b/virt/release_notes/virt-4-17-release-notes.adoc
@@ -78,6 +78,8 @@ This release adds new features and enhancements related to the following compone
 ====
 Overcommitting memory on a highly utilized system can decrease workload performance.
 ====
+//CNV-36607 Release note: GA post-copy
+* Enabling post-copy live migration for VM workloads is now generally available.
 
 //CNV-30590 NEW GA Host-side USB passthrough
 * As a cluster administrator, you can xref:../../virt/virtual_machines/advanced_vm_management/virt-configuring-usb-host-passthrough.adoc#virt-configuring-usb-host-passthrough[expose USB devices in a cluster], making them available for virtual machine (VM) owners to assign to VMs. You expose a USB device by first enabling host passthrough and then configuring the VM to access the USB device.
