--- a/modules/ob-persistent-volume.adoc
+++ b/modules/ob-persistent-volume.adoc
@@ -6,4 +6,4 @@
 [id="ob-persistent-volume_{context}"]
 = Configuring persistent volume
 
-You can configure persistent volume with Builds.
+You can configure persistent volume with Builds for OpenShift.
