[OSSM-8237] Update older SMCP release notes to contain operator version info

--- a/modules/ossm-rn-new-features.adoc
+++ b/modules/ossm-rn-new-features.adoc
@@ -22,7 +22,8 @@ This release adds improvements related to the following components and concepts.
 //As of May 8, there are no new features so the phrase "new features" has been removed. This is a z-stream release to update containers before they are Grade B or C on May 28.
 //Includes 2.5.2, 2.4.8, 2.3.12
 
-This release of {SMProductName} addresses Common Vulnerabilities and Exposures (CVEs), contains bug fixes, and is supported on {product-title} 4.12 and later.
+This release of {SMProductName} updates the {SMProductName} Operator version to 2.5.2, and includes the following `ServiceMeshControlPlane` resource version updates: 2.5.2, 2.4.8 and 2.3.12.
+This release addresses Common Vulnerabilities and Exposures (CVEs), contains bug fixes, and is supported on {product-title} 4.12 and later.
 
 The most current version of the {SMProductName} Operator can be used with all supported versions of {SMProductShortName}. The version of {SMProductShortName} is specified using the `ServiceMeshControlPlane`.
 
@@ -49,7 +50,9 @@ The most current version of the {SMProductName} Operator can be used with all su
 //As of March 28, 2024, there are no new features so the phrase "new features" has been removed. This release is to address container grades and Bug fixes.
 //Includes 2.5.1, 2.4.7, 2.3.11
 
-This release of {SMProductName} addresses Common Vulnerabilities and Exposures (CVEs), contains bug fixes, and is supported on {product-title} 4.12 and later.
+This release of {SMProductName} updates the {SMProductName} Operator version to 2.5.1, and includes the following `ServiceMeshControlPlane` resource version updates: 2.5.1, 2.4.7 and 2.3.11.
+
+This release addresses Common Vulnerabilities and Exposures (CVEs), contains bug fixes, and is supported on {product-title} 4.12 and later.
 
 === Component versions for {SMProductName} version 2.5.1
 
@@ -75,7 +78,9 @@ This release of {SMProductName} addresses Common Vulnerabilities and Exposures (
 [id="new-features-ossm-2-5"]
 == New features {SMProductName} version 2.5
 
-This release of {SMProductName} adds new features, addresses Common Vulnerabilities and Exposures (CVEs), contains bug fixes, and is supported on {product-title} 4.12 and later.
+This release of {SMProductName} updates the {SMProductName} Operator version to 2.5.0, and includes the following `ServiceMeshControlPlane` resource version updates: 2.5.0, 2.4.6 and 2.3.10.
+
+This release adds new features, addresses Common Vulnerabilities and Exposures (CVEs), contains bug fixes, and is supported on {product-title} 4.12 and later.
 
 This release ends maintenance support for OpenShift {SMProductShortName} version 2.2. If you are using OpenShift {SMProductShortName} version 2.2, you should update to a supported version.
 
@@ -185,7 +190,7 @@ A new version of the Gateway API custom resource definition (CRD) is now availab
 //As of May 8, there are no new features so the phrase "new features" has been removed. This is a z-stream release to update containers before they are Grade B or C on May 28.
 //Includes 2.5.2, 2.4.8, 2.3.12
 
-This release of {SMProductName} addresses Common Vulnerabilities and Exposures (CVEs), contains bug fixes, and is supported on {product-title} 4.12 and later.
+This release of {SMProductName} is included with the {SMProductName} Operator 2.5.2, addresses Common Vulnerabilities and Exposures (CVEs), contains bug fixes, and is supported on {product-title} 4.12 and later.
 
 The most current version of the {SMProductName} Operator can be used with all supported versions of {SMProductShortName}. The version of {SMProductShortName} is specified using the `ServiceMeshControlPlane`.
 
@@ -212,7 +217,7 @@ The most current version of the {SMProductName} Operator can be used with all su
 //2.5.1, 2.4.7, 2.3.11
 //As of March 28, 2024, there are no new features so the phrase "new features" has been removed. This release is to address container grades, and at bug fixes.
 
-This release of {SMProductName} addresses Common Vulnerabilities and Exposures (CVEs), contains bug fixes, and is supported on {product-title} 4.12 and later.
+This release of {SMProductName} is included with the {SMProductName} Operator 2.5.1, addresses Common Vulnerabilities and Exposures (CVEs), contains bug fixes, and is supported on {product-title} 4.12 and later.
 
 === Component versions for {SMProductName} version 2.4.7
 
@@ -237,7 +242,7 @@ This release of {SMProductName} addresses Common Vulnerabilities and Exposures (
 [id="new-features-ossm-2-4-6"]
 == New features {SMProductName} version 2.4.6
 
-This release of {SMProductName} addresses Common Vulnerabilities and Exposures (CVEs), contains bug fixes, and is supported on {product-title} 4.12 and later.
+This release of {SMProductName} is included with the {SMProductName} Operator 2.5.0, addresses Common Vulnerabilities and Exposures (CVEs), contains bug fixes, and is supported on {product-title} 4.12 and later.
 
 === Component versions for {SMProductName} version 2.4.6
 |===
@@ -255,7 +260,9 @@ This release of {SMProductName} addresses Common Vulnerabilities and Exposures (
 
 == New features {SMProductName} version 2.4.5
 
-This release of {SMProductName} addresses Common Vulnerabilities and Exposures (CVEs), contains bug fixes, and is supported on {product-title} 4.11 and later versions.
+This release of {SMProductName} updates the {SMProductName} Operator version to 2.4.5, and includes the following `ServiceMeshControlPlane` resource version updates: 2.4.5, 2.3.9 and 2.2.12.
+
+This release addresses Common Vulnerabilities and Exposures (CVEs), contains bug fixes, and is supported on {product-title} 4.11 and later.
 
 === Component versions included in {SMProductName} version 2.4.5
 //Component table updated for 2.4.5, 2.3.9, and 2.2.12
@@ -528,7 +535,7 @@ endif::openshift-rosa[]
 //As of May 8, there are no new features so the phrase "new features" has been removed. This is a z-stream release to update containers before they are Grade B or C on May 28.
 //Includes 2.5.2, 2.4.8, 2.3.12
 
-This release of {SMProductName} addresses Common Vulnerabilities and Exposures (CVEs), contains bug fixes, and is supported on {product-title} 4.12 and later.
+This release of {SMProductName} is included with the {SMProductName} Operator 2.5.2, addresses Common Vulnerabilities and Exposures (CVEs), contains bug fixes, and is supported on {product-title} 4.12 and later.
 
 The most current version of the {SMProductName} Operator can be used with all supported versions of {SMProductShortName}. The version of {SMProductShortName} is specified using the `ServiceMeshControlPlane`.
 
@@ -555,7 +562,7 @@ The most current version of the {SMProductName} Operator can be used with all su
 //2.5.1, 2.4.7, 2.3.11
 //As of March 28, 2024, there are no new features so the phrase "new features" has been removed.
 
-This release of {SMProductName} addresses Common Vulnerabilities and Exposures (CVEs), contains bug fixes, and is supported on {product-title} 4.12 and later.
+This release of {SMProductName} is included with the {SMProductName} Operator 2.5.1, addresses Common Vulnerabilities and Exposures (CVEs), contains bug fixes, and is supported on {product-title} 4.12 and later.
 
 === Component versions for {SMProductName} version 2.3.11
 
@@ -581,7 +588,7 @@ This release of {SMProductName} addresses Common Vulnerabilities and Exposures (
 == New features {SMProductName} version 2.3.10
 //Update with 2.5
 
-This release of {SMProductName} addresses Common Vulnerabilities and Exposures (CVEs), contains bug fixes, and is supported on {product-title} 4.12 and later.
+This release of {SMProductName} is included with the {SMProductName} Operator 2.5.0, addresses Common Vulnerabilities and Exposures (CVEs), contains bug fixes, and is supported on {product-title} 4.12 and later.
 
 === Component versions for {SMProductName} version 2.3.10
 |===
@@ -600,7 +607,7 @@ This release of {SMProductName} addresses Common Vulnerabilities and Exposures (
 == New features {SMProductName} version 2.3.9
 //Update with 2.4.5
 
-This release of {SMProductName} addresses Common Vulnerabilities and Exposures (CVEs), contains bug fixes, and is supported on {product-title} 4.11 and later versions.
+This release of {SMProductName} is included with the {SMProductName} Operator 2.4.5, addresses Common Vulnerabilities and Exposures (CVEs), contains bug fixes, and is supported on {product-title} 4.11 and later.
 
 === Component versions included in {SMProductName} version 2.3.9
 //Updated with 2.4.5
@@ -903,7 +910,7 @@ Additionally, the SMMR must also be configured for cluster-wide deployment. This
 
 == New features {SMProductName} version 2.2.12
 
-This release of {SMProductName} addresses Common Vulnerabilities and Exposures (CVEs), contains bug fixes, and is supported on {product-title} 4.11 and later versions.
+This release of {SMProductName} is included with the {SMProductName} Operator 2.4.5, addresses Common Vulnerabilities and Exposures (CVEs), contains bug fixes, and is supported on {product-title} 4.11 and later.
 
 === Component versions included in {SMProductName} version 2.2.12
 //2.2.12 released with 2.4.5
